--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   	<head>
     	<link rel = "stylesheet" type = "text/css" href = "HomepageStyle.css">
-      <link href = "/Users/Marina/Sites/bootstrap-3.3.6-dist/css/bootstrap.css" rel = "stylesheet">
+      <link href = "bootstrap-3.3.6-dist/css/bootstrap.css" rel = "stylesheet">
   	</head>
   	<body>
       <div class = "container">
