--- a/Project.html
+++ b/Project.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel = "stylesheet" type = "text/css" href = "ProjectPageStyle.css">
-    <link href = "/Users/Marina/Sites/bootstrap-3.3.6-dist/css/bootstrap.css" rel = "stylesheet">
+    <link href = "bootstrap-3.3.6-dist/css/bootstrap.css" rel = "stylesheet">
   </head>
   <body>
     <div class = "container">
