Changes for Small Screen Visibility
New stack order for homepage
Larger font sizes for legibility
Removed space between two cols when stacked
Added header to project list

--- a/Project.html
+++ b/Project.html
@@ -5,10 +5,11 @@
     <link href = "bootstrap-3.3.6-dist/css/bootstrap.css" rel = "stylesheet">
   </head>
   <body>
+    <p class = "page-header"> Projects </p>
     <div class = "container">
       <div class = "row">
         <div class = col-md-4>
-          <p id="HB">HelloBacker </p>
+          <p id="HB"> HelloBacker </p>
         </div>
         <div class = col-md-4>
           <p id="MT">MarinaTassi.com </p>
