--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
   	<body>
       <div class = "container">
         <div class = "row">
-          <div class = "col-md-4">
-            <a href = "https://medium.com/@MarinaaaT"> <p id="Learn"> Blog </p> </a>
-            <a href="images/ResumeWinter2015.pdf"> <p id = "Learn"> Resume </p> </a>
-            <a href = "Project.html"> <p id= "Learn"> Projects </p> </a>
-          </div>
-          <div class = "col-md-8">
+          <div class = "col-md-8 col-md-push-4">
         		<div class = "intro">
         			<h1 id = "title"> Marina Tassi </h1>
               <p> Product Management and Development </p>
@@ -24,6 +19,11 @@
                 <a href="https://www.linkedin.com/in/marinatassi"><img src = "images/LI.png"></a>
               </div>
             </div>
+          </div>
+          <div class = "col-md-4 col-md-pull-8">
+            <a href = "https://medium.com/@MarinaaaT"> <p id="Learn"> Blog </p> </a>
+            <a href="images/ResumeWinter2015.pdf"> <p id = "Learn"> Resume </p> </a>
+            <a href = "Project.html"> <p id= "Learn"> Projects </p> </a>
           </div>
         </div>
       </div>
