Working Project Links
* made project page links work
* changed to correct github
* updated resume

--- a/Project.html
+++ b/Project.html
@@ -9,10 +9,10 @@
     <div class = "container">
       <div class = "row">
         <div class = col-md-4>
-          <p id="HB"> HelloBacker </p>
+          <a href="https://medium.com/@MarinaaaT/making-hellobacker-2f666304f87a#.zcmk7cjxj"> <p id="HB"> HelloBacker </p> </a>
         </div>
         <div class = col-md-4>
-          <p id="MT">MarinaTassi.com </p>
+          <a href = "https://medium.com/@MarinaaaT/making-marinatassi-me-87930ca41f8e#.npi1o88l6"> <p id="MT">MarinaTassi.com </p> </a>
         </div>
         <div class = col-md-4>
         </div>
