--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         			<p> Amherst College Computer Science </p>
               <p> Foodie, Techie, Dog Lover </p>
               <div class = "links">
-                <a href ="https://github.com/MarinaaaaT"><img src = "images/github-circled.svg"></a>
+                <a href ="https://github.com/mtassi17"><img src = "images/github-circled.svg"></a>
                 <a href ="https://www.instagram.com/marinaltassi/"><img src = "images/insta.png"></a>
                 <a href="https://www.linkedin.com/in/marinatassi"><img src = "images/LI.png"></a>
               </div>
@@ -22,7 +22,7 @@
           </div>
           <div class = "col-md-4 col-md-pull-8">
             <a href = "https://medium.com/@MarinaaaT"> <p id="Learn"> Blog </p> </a>
-            <a href="images/ResumeWinter2015.pdf"> <p id = "Learn"> Resume </p> </a>
+            <a href="images/BusinessResumeW2016.pdf"> <p id = "Learn"> Resume </p> </a>
             <a href = "Project.html"> <p id= "Learn"> Projects </p> </a>
           </div>
         </div>
