--- a/index.html
+++ b/index.html
@@ -2,29 +2,24 @@
 <html>
   	<head>
     	<link rel = "stylesheet" type = "text/css" href = "HomepageStyle.css">
-      <link href = "bootstrap-3.3.6-dist/css/bootstrap.css" rel = "stylesheet">
   	</head>
   	<body>
-      <div class = "container">
-        <div class = "row">
-          <div class = "col-md-8 col-md-push-4">
-        		<div class = "intro">
-        			<h1 id = "title"> Marina Tassi </h1>
-              <p> Product Management and Development </p>
-        			<p> Amherst College Computer Science </p>
-              <p> Foodie, Techie, Dog Lover </p>
-              <div class = "links">
-                <a href ="https://github.com/mtassi17"><img src = "images/github-circled.svg"></a>
-                <a href ="https://www.instagram.com/marinaltassi/"><img src = "images/insta.png"></a>
-                <a href="https://www.linkedin.com/in/marinatassi"><img src = "images/LI.png"></a>
-              </div>
-            </div>
-          </div>
-          <div class = "col-md-4 col-md-pull-8">
-            <a href = "https://medium.com/@MarinaaaT"> <p id="Learn"> Blog </p> </a>
-            <a href="images/BusinessResumeW2016.pdf"> <p id = "Learn"> Resume </p> </a>
-            <a href = "Project.html"> <p id= "Learn"> Projects </p> </a>
-          </div>
+      <div class="nav">
+        <div class = "headlinks">
+            <a class = "Learn" href = "https://medium.com/@MarinaaaT"> <p> Blog </p> </a>
+            <a class = "Learn" href="images/BusinessResumeW2016.pdf"> <p> Resume </p> </a>
+            <a class = "Learn" href = "Project.html"> <p> Projects </p> </a>
+        </div>
+      </div>
+      <div class = "intro">
+        <h1 id = "title"> Marina Tassi </h1>
+        <p> Product Management/Strategy</p>
+    		<p> Amherst College Computer Science </p>
+        <p> Foodie, Techie, Dog Lover </p>
+        <div class = "links">
+          <a href ="https://github.com/mtassi17"><img src = "images/github-circled.svg"></a>
+          <a href ="https://www.instagram.com/marinaltassi/"><img src = "images/insta.png"></a>
+          <a href="https://www.linkedin.com/in/marinatassi"><img src = "images/LI.png"></a>
         </div>
       </div>
   	</body>
