--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <div class="nav">
         <div class = "headlinks">
             <a class = "Learn" href = "https://medium.com/@MarinaaaT"> <p> Blog </p> </a>
-            <a class = "Learn" href="images/BusinessResumeW2016.pdf"> <p> Resume </p> </a>
+            <a class = "Learn" href="images/ResumeFall2016.pdf"> <p> Resume </p> </a>
             <a class = "Learn" href = "Project.html"> <p> Projects </p> </a>
         </div>
       </div>
