--- a/Project.html
+++ b/Project.html
@@ -12,9 +12,13 @@
           <a href="https://medium.com/@MarinaaaT/making-hellobacker-2f666304f87a#.zcmk7cjxj"> <p id="HB"> HelloBacker </p> </a>
         </div>
         <div class = col-md-4>
-          <a href = "https://medium.com/@MarinaaaT/making-marinatassi-me-87930ca41f8e#.npi1o88l6"> <p id="MT">MarinaTassi.com </p> </a>
+          <a href = "https://medium.com/@MarinaaaT/making-marinatassi-me-87930ca41f8e#.npi1o88l6"> <p id="MT"> Personal Website </p> </a>
         </div>
         <div class = col-md-4>
+          <a href=""> <p id = "CP"> Corcoran Project </p> </a>
+        </div>
+        <div class = col-md-4>
+          <a href=""> <p id = "RI"> Rapunzl Investments </p> </a>
         </div>
       </div>
     </div>
