New Resume and Project Fixes
I added an October Resume and links to the project page

--- a/Project.html
+++ b/Project.html
@@ -15,10 +15,10 @@
           <a href = "https://medium.com/@MarinaaaT/making-marinatassi-me-87930ca41f8e#.npi1o88l6"> <p id="MT"> Personal Website </p> </a>
         </div>
         <div class = col-md-4>
-          <a href=""> <p id = "CP"> Corcoran Project </p> </a>
+          <a href="https://medium.com/@MarinaaaT/interning-at-the-corcoran-group-5f8f9ab64229#.xb8csy63n"> <p id = "CP"> Corcoran Project </p> </a>
         </div>
         <div class = col-md-4>
-          <a href=""> <p id = "RI"> Rapunzl Investments </p> </a>
+          <a href="https://medium.com/@MarinaaaT/rapunzl-pming-a-promising-new-product-142d333ceb4f#.2xiq08kve"> <p id = "RI"> Rapunzl Investments </p> </a>
         </div>
       </div>
     </div>
